// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumb component - snapshot > matches snapshot when hideRootLabel is false 1`] = `
<DocumentFragment>
  <nav
    class=
    data-ods=breadcrumb
    id=:r0:
    role=navigation
  >
    <ol
      class=_breadcrumb__list
    >
      <li
        class=_breadcrumb-item
        data-ods=breadcrumb-item
      >
        <a
          class=_link
          data-ods=breadcrumb-link
          href=/
        >
          vRack services
        </a>
        <span
          class=_breadcrumb-separator
          role=presentation
        />
      </li>
      <li
        class=_breadcrumb-item
        data-ods=breadcrumb-item
      >
        <a
          class=_link
          data-ods=breadcrumb-link
          href=/:id
        >
          vRack service
        </a>
        <span
          class=_breadcrumb-separator
          role=presentation
        />
      </li>
      <li
        class=_breadcrumb-item
        data-ods=breadcrumb-item
      >
        <span
          aria-current=page
          data-ods=breadcrumb-link
          href=/:id/listing
        >
          vRack service listing
        </span>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb component - snapshot > matches snapshot when hideRootLabel is true 1`] = `
<DocumentFragment>
  <nav
    class=
    data-ods=breadcrumb
    id=:r1:
    role=navigation
  >
    <ol
      class=_breadcrumb__list
    >
      <li
        class=_breadcrumb-item
        data-ods=breadcrumb-item
      >
        <a
          class=_link
          data-ods=breadcrumb-link
          href=/:id
        >
          vRack service
        </a>
        <span
          class=_breadcrumb-separator
          role=presentation
        />
      </li>
      <li
        class=_breadcrumb-item
        data-ods=breadcrumb-item
      >
        <span
          aria-current=page
          data-ods=breadcrumb-link
          href=/:id/listing
        >
          vRack service listing
        </span>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;
